--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,6 +1,5 @@
 /* 2-common.css */
-div {
-      box-sizing: border-box;
-      margin: 20px auto;
-      text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
