--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,9 +1,10 @@
 /* 2-footer.css */
 footer {
-      position: fixed;
-      bottom: 0px;
-      background: #00FF00;
-      height: 60px;
-      width: 100%;
-      left: 0;
- }
+  background-color: #00ff00;
+  height: 60px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  line-height: 60px;
+}
