--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,10 +1,6 @@
 /* 2-header.css */
 header {
-      position: absolute;
-      left: 0px;
-      right: 0px;
-      top: 0px;
-      background-color: #FF0000;
-      height: 70px;
-      width: 100%;
+  background-color: #ff0000;
+  height: 70px;
+  width: 100%;
 }
