--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,15 +1,15 @@
 header {
-      position: fixed;
-      background-color: white;
-      height: 70px;
-      width: 100%;
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+  align-items: center;
+}
 
-      left: 0px;
-      right: 0px;
-      top: 0px;
-
-      border-bottom: 1px solid #CCCCCC;
-      background: url(../images/logo.png) no-repeat;
-      background-position: 20px 50%;
-
+header .logo {
+  width: 142px;
+  height: 60px;
+  background: url("../images/logo.png") no-repeat center;
+  padding-left: 20px;
 }
