--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,16 +1,14 @@
-* {
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
 body {
-      margin: 0px;
-      padding: 0px;
-      color: #484848; /* green shade */
-      font-size: 14px;
+  margin: 0;
+  padding: 0;
+  color: #484848;
+  font-size: 14px;
+  font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .container {
-    /*box-sizing: border-box;*/
-    max-width: 1000px;
-    margin: 30px auto;
+  margin: auto;
+  max-width: 1000px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
