--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,31 +1,26 @@
-/* 4-filters.css */
 .filters {
-    color: white;
-    height: 70px;
-    width: 100%; /* of container */
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  border: solid 1px #dddddd;
+  border-radius: 4px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: right;
 }
 
-.filters button {
-    position: relative;
-    font-size: 18px;
-    color: white;
-    background-color: #FF5A5F; /* red shade */
-
-    height: 48px;
-    width: 20%; /* of the filters */
-
-    border-width: 0px 0px 0px 0px;
-    border-radius: 4px;
-
-    /* margin: top right bottom left */
-    /*margin: auto 0px;*/
-    margin-top: 10px;
-    margin-right: -75%;     /*margin-left: 80%;*/
-
+section.filters button {
+  font-size: 18px;
+  color: white;
+  background-color: #ff5a5f;
+  height: 48px;
+  border: 0px;
+  border-radius: 4px;
+  width: 20%;
+  margin-right: 30px;
+  opacity: 1;
 }
-
-button:hover {
-    opacity: 0.9;
+section.filters button:hover {
+  opacity: 0.9;
 }
